# dinozauru-majaslapa

./: README.md  app.py  data_conversions.py  forms.py  models.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
custom_plugins/: HighlightBar.py  HighlightPie.py
templates/: 404_page.html  _diet_pie.html  _floating_dinos.html  _macros.html  _navbar.html  _types_hist.html  base.html  create_dinosaur.html  type_page.html
